index de landpage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="contenedor_pie_pagina">
-      <p>Website Creado Por Ariel Manuel Perez</p>
+      <p>Website Creado Por Ariel Manuel Perez ariel@goldlink.com.ar</p>
     </div>
 
 </body>
