--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
       </div>
     </div>
     <div class="contenedor_pie_pagina">
-      <p>Website Creado Por Ariel Manuel Perez ariel@goldlink.com.ar</p>
+      <div class='creacion'>
+        <p>Website Creado Por Ariel Manuel Perez</p>
+      </div>
+      <div class="mail">
+        <p>mail:ariel@goldlink.com.ar</p>
+      </div>
+      
     </div>
 
 </body>
