--- a/tinu.html
+++ b/tinu.html
@@ -1,14 +1,63 @@
-<!DOCTYPE html>;
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">;
-	<title>Lalala Showroom</title>;
-	<link rel="stylesheet" type="text/css" href="estilo.css">;
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400;1,700&display=swap" rel="stylesheet">   
+    <link rel="stylesheet" href="./style.css">
+    <title>Feliz Cumple Tinu</title>
 </head>
 <body>
-     <header>
-     	<img src="img/logo.png" alt="logo lalala">;
-         <h1>Lalala showroom</h1>;	
-     </header>
+   <audio controls>
+     <source src="musica.mp3" type="audio/mp3">
+        Tu navegador no soporta audio HTML5.  
+   </audio>
+    <div class="contenedor">
+      <div class= "div_contenedor_texto">
+        <div class="img_logo_chico"></div>
+        <div class="div_descripcion">         
+          <p>Feliz cumple mi amor!!!
+17 años ya, estas gigante ya sos una señorita, desde ayer no paro de pensar en vos,
+te mereces todo lo mejor del mundo, sos tean especial, buena hija, hermana, nieta,
+sobrina, prima, sos lo que no hay, estudias, enseñas, ayudas, comprendes, sufris, te enojas
+pero das y das siempre lo mejor de vos constantemente dia a dia, te superas en todo lo que te propones, 
+pensabas el dia que naciste y para mi fue ayer cuando nos miramos y fue un flechazo de un amor profundo para mi
+que nunca habia sentido, te amo con locura hija, perdon por no estar ahi a tu lado y poder abrazarte fuerte.
+Nunca pense en fallarte pero lo hice, perdoname!!. No quiero ser el causante de borrar esa hermosa sonrisa
+que tenes, quiero que pases un dia super, super feliz, que te diviertas, mas que nadie en 
+el mundo te deseo que seas inmentamente feliz, nunca bajes tus brazos, que luches por todo lo que te 
+propones, que sos mas que capaz en lograr todo!!. No cambies por nada en el mundo, me hace muy feliz verte
+en lo que te convertis dia a dia, estoy muy pero muy orgulloso de vos, ya a los 17 años ya no puedo pedirte mas,
+pero sé, como sos, que me vas a dar mucha mas felicidad por todos los logros que se que vas a conseguir, te amo mi chiquita
+por que aunque tengas todos los años del mundo, siempre vas a ser esa chiquita que con esos pelos todos despeinados,
+salio con el doctor del quirofano en la cunita, me vio y se puso a llorar al ver el gordo feo de padre que le habia tocado.
+siempre vas a ser mi chiquita, se que a veces o casi siempre estamos peleando, busco la vuelta para cambiarlo y que no sea asi
+y lo voy a lograr prometo, pero no lo hago por que no te quiera o ame todo lo contrario doy la vida por vos!!! te pido perdon por eso
+no quiero hacerlo mas!!! pero SOS TERRIBLE VOS TAMBIEN!!! jajaja. Se hizo largo el texto pero te juro que puede ser aun mucho mas por que
+tengo tantas cosas hermosas para decirte que no me alcanzaria el dia para enumerar todolo todo, sos perfecta hija!!!
+Feliz cumpleaño tinu!!
+Se feliz muy feliz que eso es lo mas importante ser feliz!!! 
+Te Amo mucho con toda el alma!!!!!
+Papa!
+</p>          
+        </div>  
+      </div>             
+  
+      <div class= "div_contenedor">
+          <img src="foto.jpg" alt="fondo">
+      </div>         
+    </div>  
+    <div class="contenedor_pie_pagina">
+      <div class='creacion'>
+        <p>Website Creado Por Ariel Manuel Perez</p>
+      </div>
+      <div class="mail">
+        <p>mail:ariel@goldlink.com.ar</p>
+      </div>
+      
+    </div>
+
 </body>
 </html>
