--- a/tinu.html
+++ b/tinu.html
@@ -36,10 +36,10 @@ salio con el doctor del quirofano en la cunita, me vio y se puso a llorar al ver
 siempre vas a ser mi chiquita, se que a veces o casi siempre estamos peleando, busco la vuelta para cambiarlo y que no sea asi
 y lo voy a lograr prometo, pero no lo hago por que no te quiera o ame todo lo contrario doy la vida por vos!!! te pido perdon por eso
 no quiero hacerlo mas!!! pero SOS TERRIBLE VOS TAMBIEN!!! jajaja. Se hizo largo el texto pero te juro que puede ser aun mucho mas por que
-tengo tantas cosas hermosas para decirte que no me alcanzaria el dia para enumerar todolo todo, sos perfecta hija!!!
+tengo tantas cosas hermosas para decirte que no me alcanzaria el dia para enumerar todo lo que tengo que decir de vos, sos perfecta hija!!!
 Feliz cumpleaño tinu!!
 Se feliz muy feliz que eso es lo mas importante ser feliz!!! 
-Te Amo mucho con toda el alma!!!!!
+Te Amo con toda el alma!!!!!
 Papa!
 </p>          
         </div>  
